applying additional hookings from environment while installing